--- a/maku-server/src/main/resources/application.yml
+++ b/maku-server/src/main/resources/application.yml
@@ -30,6 +30,10 @@ storage:
   local:
     path: D://upload
 
+maku:
+  xss:
+    enabled: true
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   # 实体扫描，多个package用逗号或者分号分隔
